--- a/app/views/routines/show.html.erb
+++ b/app/views/routines/show.html.erb
@@ -30,7 +30,7 @@
 
 <%= link_to 'See Stats', user_path(@routine.user.id) %> |
 <%= link_to 'Edit', edit_routine_path(@routine) %> |
-<%= link_to 'Back', routines_path %>
+<%= link_to 'Home', routines_path %>
 
 
 
