--- a/app/views/routines/show.html.erb
+++ b/app/views/routines/show.html.erb
@@ -23,7 +23,9 @@
 
   <div id="chart_div" style="width: 900px; height: 500px;"></div>
 
-  <script>window.graph = <%= raw @graph %></script>
+  <script>window.graph = <%= raw @graph %>
+          window.args = <%= raw @routine.final_tooltip %>
+  </script>
 
 ###################################
 <br />
