--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,34 +1,62 @@
-<%= @user.name %><br />
-
-<html>
-  <head>
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript">
-      google.load("visualization", "1", {packages:["corechart"]});
-      google.setOnLoadCallback(drawChart);
-      function drawChart() {
-        var dataTable = new google.visualization.DataTable();
-        dataTable.addColumn('string', 'Date');
-        dataTable.addColumn('number', 'Total Weight');
-        // A column for custom tooltip content
-        dataTable.addColumn({type: 'string', role: 'tooltip'});
-        dataTable.addRows([
-          ["2013-08-11", 2160, "8 reps at 45 pounds, 8 reps at 90 pounds, 8 reps at 135 pounds"], ["2013-08-12", 3160, "8 reps at 45 pounds, 8 reps at 90 pounds, 8 reps at 135 pounds"]  
-      ]);
-
-      var options = {tooltip: 
-                    {isHhml: true}, 
-                    title: 'Your Exercise', 
-                    hAxis: {title: 'Date'},
-                    vAxis: {title: 'Total Weight (pounds)'} };
-      var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
-      chart.draw(dataTable, options);
-}
-    </script>
-  </head>
-  <body>
-    <div id="chart_div" style="width: 900px; height: 500px;"></div>
-  </body>
-</html>
-
-<%= link_to 'Home', routines_path %>
+<script type="text/javascript" src="//www.google.com/jsapi"></script>  
+<script type="text/javascript">  
+google.load('visualization', '1', { packages : ['controls'] } );  
+google.setOnLoadCallback(createTable);  
+  
+function createTable() {  
+  // Create the dataset (DataTable)  
+  var myData = new google.visualization.DataTable();  
+  myData.addColumn('date', 'Date');  
+  myData.addColumn('number', 'Weight');
+  myData.addColumn('string', 'Exercise Name');   
+  myData.addRows([  
+    [new Date(2014, 6, 12), 90, "Squat"],      
+    [new Date(2014, 6, 13), 80, "Squat"],      
+    [new Date(2014, 6, 14), 100, "Squat"],      
+    [new Date(2014, 6, 15), 80, "Squat"],      
+    [new Date(2014, 6, 16), 70, "Squat"]
+  ]);  
+  
+  // Create a dashboard.  
+  var dash_container = document.getElementById('dashboard_div'),  
+    myDashboard = new google.visualization.Dashboard(dash_container);  
+  
+  // Create a date range slider  
+  var myDateSlider = new google.visualization.ControlWrapper({  
+    'controlType': 'ChartRangeFilter',  
+    'containerId': 'control_div',  
+    'options': {  
+      'filterColumnLabel': 'Date'  
+    }  
+  });  
+  
+  // Table visualization  
+  var myTable = new google.visualization.ChartWrapper({  
+    'chartType' : 'Table',  
+    'containerId' : 'table_div'  
+  });  
+  
+  // Bind myTable to the dashboard, and to the controls  
+  // this will make sure our table is update when our date changes  
+  myDashboard.bind(myDateSlider, myTable);  
+  
+  // Line chart visualization  
+  var myLine = new google.visualization.ChartWrapper({  
+    'chartType' : 'LineChart',  
+    'containerId' : 'line_div',
+    'view': {'columns': [0, 1]}  
+  });  
+    
+  // Bind myLine to the dashboard, and to the controls  
+  // this will make sure our line chart is update when our date changes  
+  myDashboard.bind(myDateSlider, myLine );  
+  
+  myDashboard.draw(myData);  
+}  
+</script>  
+  
+<div id="dashboard_div">  
+  <div id="control_div"><!-- Controls renders here --></div>  
+  <div id="line_div"><!-- Line chart renders here --></div>  
+  <div id="table_div"><!-- Table renders here --></div>  
+</div>  
