--- a/app/views/routines/index.html.erb
+++ b/app/views/routines/index.html.erb
@@ -10,7 +10,7 @@
 
 <% @routines.each do |routine| %>
   <tr>
-    <td><%= routine.name %></td>
+    <td><%= routine.name %> - <%= routine.date %></td>
     <td><%= link_to 'Show', routine %></td>
     <td><%= link_to 'Edit', edit_routine_path(routine) %></td>
     <td><%= link_to 'Destroy', routine, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -20,4 +20,5 @@
 
 <br />
 
-<%= link_to 'New Routine', new_routine_path %>
+<%= link_to 'New Routine', new_routine_path %> | 
+<%= link_to 'Stats', user_path(1)%>
