--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@ function createTable() {
   // Create the dataset (DataTable)  
   var myData = new google.visualization.DataTable();  
   myData.addColumn('date', 'Date');  
-  myData.addColumn('number', 'Weight');
+  myData.addColumn('number', 'Total Weight');
   myData.addColumn('string', 'Exercise Name');   
   myData.addRows([  
     [new Date(2014, 6, 12), 90, "Squat"],      
@@ -35,7 +35,14 @@ function createTable() {
     }
 });  
 
-  
+  // Create the category filter
+  var categoryFilter = new google.visualization.ControlWrapper({  
+    'controlType': 'CategoryFilter',  
+    'containerId': 'category_filter_div',  
+    'options': {  
+        'filterColumnLabel': 'Exercise Name'
+    }
+}); 
   
   // Table visualization  
   var myTable = new google.visualization.ChartWrapper({  
@@ -56,13 +63,17 @@ function createTable() {
     
   // Bind myLine to the dashboard, and to the controls  
   // this will make sure our line chart is update when our date changes  
-  myDashboard.bind(myDateSlider, myLine );  
+  myDashboard.bind(myDateSlider, myLine ); 
+
+  // Bind the two controls to the myLine
+  myDashboard.bind([myDateSlider, categoryFilter], [myLine, myTable]); 
   
   myDashboard.draw(myData);  
 }  
 </script>  
   
 <div id="dashboard_div">  
+  <div id="category_filter_div"><!-- Controls renders here for filter --></div>
   <div id="control_div"><!-- Controls renders here --></div>  
   <div id="line_div"><!-- Line chart renders here --></div>  
   <div id="table_div"><!-- Table renders here --></div>  
