--- a/app/views/routines/show.html.erb
+++ b/app/views/routines/show.html.erb
@@ -21,7 +21,7 @@
 
 ###################################
 
-  <div id="chart_div" style="width: 900px; height: 500px;"></div>
+  <div id="chart_div"></div>
 
   <script>window.graph = <%= raw @graph %>
           window.args = <%= raw @routine.final_tooltip %>
