--- a/app/views/routines/index.html.erb
+++ b/app/views/routines/index.html.erb
@@ -11,8 +11,8 @@
 <% @routines.each do |routine| %>
   <tr>
     <td><%= routine.name %> - <%= routine.date %></td>
-    <td><%= link_to 'Show', routine %></td>
-    <td><%= link_to 'Edit', edit_routine_path(routine) %></td>
+    <td><%= link_to 'Show', routine, class: 'btn' %></td>
+    <td><%= link_to 'Edit', edit_routine_path(routine), class: 'btn-small' %></td>
     <td><%= link_to 'Destroy', routine, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
@@ -20,5 +20,5 @@
 
 <br />
 
-<%= link_to 'New Routine', new_routine_path %> | 
-<%= link_to 'Stats', user_path(1)%>
+<%= link_to 'New Routine', new_routine_path, class: 'btn' %>
+<%= link_to 'Stats', user_path(1), class: 'btn' %>
