--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,8 +8,10 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require jquery.ui.accordion
  *= require jquery.ui.autocomplete
  *= require jquery.ui.datepicker
  *= require_self
  *= require_tree .
+ *= require ../../../vendor/assets/stylesheets/override
  */
