--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -9,17 +9,20 @@
       </div>
       <div class='row-fluid'>
         <span class='span2'></span>
-        <span class='span7'>
+        <span class='span7 sign_up btn btn-danger'>
+          Sign Up
         </span>
       </div>
       <div class='row-fluid'>
         <span class='span2'></span>
-        <span class='span7'>
+        <span class='span7 login btn btn-info'>
+          Login
         </span>
       </div>
       <div class='row-fluid'>
         <span class='span2'></span>
-        <span class='span7'>
+        <span class='span7 steven'>
+          Created By Steven Brooks
         </span>
       </div>
     </div>
