um not really sure what I just did

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -10,13 +10,13 @@
       <div class='row-fluid'>
         <span class='span2'></span>
         <span class='span7 sign_up btn btn-danger'>
-          Sign Up
+          <%= link_to 'Sign up', new_user_registration_path %>
         </span>
       </div>
       <div class='row-fluid'>
         <span class='span2'></span>
         <span class='span7 login btn btn-info'>
-          Login
+          <%= link_to 'Login', new_user_session_path, :class => 'first_page' %>
         </span>
       </div>
       <div class='row-fluid'>
