made buttons clickable

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -9,14 +9,14 @@
       </div>
       <div class='row-fluid'>
         <span class='span2'></span>
-        <span class='span7 sign_up btn btn-danger'>
-          <%= link_to 'Sign up', new_user_registration_path %>
+        <span class=''>
+          <%= link_to 'Sign up', new_user_registration_path, :class => 'span7 sign_up btn btn-danger' %>
         </span>
       </div>
       <div class='row-fluid'>
         <span class='span2'></span>
-        <span class='span7 login btn btn-info'>
-          <%= link_to 'Login', new_user_session_path, :class => 'first_page' %>
+        <span class=''>
+          <%= link_to 'Login', new_user_session_path, :class => 'span7 login btn btn-info' %>
         </span>
       </div>
       <div class='row-fluid'>
