--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -4,7 +4,7 @@
       <div class="row-fluid">
         <span class="span2"></span>
         <span class="span7">
-          <h1 class="title">WorkOut<span class="ny">App</span></h1>
+          <h1 class="title">WorkOut<span class="ny"></span></h1>
         </span>
       </div>
       <div class='row-fluid'>
