--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,10 +1,14 @@
+<div class="alert alert-info">
+    There is currently a server issue and the site will be unable to function properly until is it fixed. <%= Time.now.strftime("%m/%d/%Y") %> 
+  </div>
+
 <div class="container">
   <div class="container meat">
     <div class="row-fluid">
       <div class="row-fluid">
         <span class="span2"></span>
-        <span class="span7">
-          <h1 class="title">WorkOut<span class="ny"></span></h1>
+        <span class="">
+          <h1 class="span7 title">WorkOut<span class="ny"></span></h1>
         </span>
       </div>
       <div class='row-fluid'>
@@ -21,8 +25,8 @@
       </div>
       <div class='row-fluid'>
         <span class='span2'></span>
-        <span class='span7 steven'>
-          Created By Steven Brooks
+        <span class=''>
+          <p class="span7 steven">Created By Steven Brooks</p>
         </span>
       </div>
     </div>
