made jqeury accordion fluid

--- a/app/views/routines/show.html.erb
+++ b/app/views/routines/show.html.erb
@@ -11,7 +11,9 @@
 <div id="chart_div"></div>
 <script>
   $(function() {
-    $("#accordion").accordion();
+    $("#accordion").accordion({
+      fluid: true,
+    });
   });
 </script>
 
