made some navigation for newsfeed

--- a/app/views/routines/show.html.erb
+++ b/app/views/routines/show.html.erb
@@ -38,7 +38,8 @@
 
 <%= link_to 'See Stats', user_path(@routine.user.id) %> |
 <%= link_to 'Edit', edit_routine_path(@routine) %> |
-<%= link_to 'Home', routines_path %>
+<%= link_to 'Home', routines_path %> | 
+<%= link_to "Newsfeed", activities_path %>
 
 
 
