--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -83,7 +83,8 @@ function createTable() {
   <div id="table_div"><!-- Table renders here --></div>  
 </div>  
 
-<%= link_to 'Home', routines_path %>
+<%= link_to 'Home', routines_path %> | 
+<%= link_to "Newsfeed", activities_path %>
 
 
 
