--- a/app/views/routines/index.html.erb
+++ b/app/views/routines/index.html.erb
@@ -30,5 +30,6 @@
   <%= link_to 'New Routine', new_routine_path, class: 'btn' %>
   <%= link_to 'Stats', user_path(@user.id), class: 'btn' %>
   <%= link_to 'Exercises', exercises_path, class: 'btn' %>
+  <%= link_to "Newfeed", activities_path, class: 'btn' %>
 
 
