fixed jquery ui accordion to default to none

--- a/app/views/routines/_form.html.erb
+++ b/app/views/routines/_form.html.erb
@@ -6,6 +6,9 @@
   <%= label_tag "routine[date]", "Date" %>
   <%= text_field_tag "routine[date]", nil, id: "date" %><br />
 
+  <%= label_tag "routine[tag_list]", "Tags (separated by commas)" %>
+  <%= text_field_tag "routine[tag_list]" %><br />
+
   <%= label_tag "routine[bodyweight]", "Current Bodyweight" %>
   <%= text_field_tag "routine[bodyweight]" %><br />
 
