--- a/app/views/routines/_form.html.erb
+++ b/app/views/routines/_form.html.erb
@@ -7,7 +7,7 @@
   <%= text_field_tag "routine[date]", nil, id: "date" %><br />
 
   <%= label_tag "routine[tag_list]", "Tags (separated by commas)" %>
-  <%= text_field_tag "routine[tag_list]" %><br />
+  <%= text_field_tag "routine[tag_list]", nil, id: "tags" %><br />
 
   <%= label_tag "routine[bodyweight]", "Current Bodyweight" %>
   <%= text_field_tag "routine[bodyweight]" %><br />
@@ -98,6 +98,16 @@ $(function() {
 
   $('#exercises').on('keydown.autocomplete', '.ex', function() {
     $(this).autocomplete({source: availableExercises});
+  });
+
+  var availableTags = [
+    <% ActsAsTaggableOn::Tag.all.each do |tag| %>
+    '<%= tag.name %>',
+    <% end %>
+  ];
+
+  $('#tags').autocomplete({
+    source: availableTags
   });
 
 });
